# qt-time-tracker

./: .gitignore  CMakeLists.txt  README.md  config.h.in  resources.rc.in
cmake/: GetGitHash.cmake  winCopyCompilerLib.cmake
include/: ActionMenu.h  DataBase.h  RunGuard.h  Settings.h  SettingsWindow.h  TaskAddWindow.h  TaskListWindow.h  TasksWindow.h  Utils.h  icons.h  main.h  mainwindow.h
include/delegate/: ComboBoxItemBooleanDelegate.h  ComboBoxItemDelegate.h  SqlDelegate.h
include/helpers/: FileHelper.h  TimeDateHelper.h
include/menu/: ClockViewMenu.h  TaskListMenu.h
include/model/: BooleanItemModel.h  TaskModel.h  TaskTimeModel.h
include/view/: ClockSettingsFacade.h  TableView.h  clockview.h
resources/: res.qrc
resources/qt/: transmission_de.qm  transmission_es.qm  transmission_eu.qm  transmission_fr.qm  transmission_hu.qm  transmission_id.qm  transmission_it_IT.qm  transmission_ka.qm  transmission_kk.qm  transmission_ko.qm  transmission_lt.qm  transmission_nl.qm  transmission_pl.qm  transmission_pt_BR.qm  transmission_pt_PT.qm  transmission_ru.qm  transmission_sv.qm  transmission_tr.qm  transmission_uk.qm  transmission_zh_CN.qm
resources/translations/: application_ru.qm  application_ru.ts
src/: ActionMenu.cpp  CMakeLists.txt  DataBase.cpp  RunGuard.cpp  Settings.cpp  SettingsWindow.cpp  TaskAddWindow.cpp  TaskListWindow.cpp  TasksWindow.cpp  Utils.cpp  advancedsettings.cpp  main.cpp  mainwindow.cpp
src/delegate/: ComboBoxItemBooleanDelegate.cpp  ComboBoxItemDelegate.cpp  SqlDelegate.cpp
src/helpers/: FileHelper.cpp  TimeDateHelper.cpp
src/menu/: ClockViewMenu.cpp  TaskListMenu.cpp
src/model/: BooleanItemModel.cpp  TaskModel.cpp  TaskTimeModel.cpp
src/view/: ClockSettingsFacade.cpp  TableView.cpp  clockview.cpp
tests/: CMakeLists.txt
tests/tst_mainwindow/: CMakeLists.txt  tst_mainwindow.cpp
ui/: advancedsettings.ui  mainwindow.ui  settings_window.ui  settingswindow.ui  task_add_dialog.ui  task_list_dialog.ui  tasks_window.ui
